# bulletin-scraper

./: .env.example  .gitignore  CURRENT_BEST_APPROACHES.md  README.md  app.py  pyproject.toml
.github/workflows/: scraper-auto-update.yml  scraper.yml
bulletin_scraper/: __init__.py  adapters.py  cli.py  config.py  events.py  graphs.py  intentions.py  json_utils.py  llm_client.py  logging_config.py  models.py  pdf_to_images.py  runner.py  schemas.py  scraping.py  sources.py
tests/: test_pipeline.py
